fixed secondary content spacing in ui

--- a/client/src/components/TestPage.css
+++ b/client/src/components/TestPage.css
@@ -35,15 +35,17 @@
   flex-direction: row;
 }
 
-.data-block-secondary-column-left,
 .data-block-secondary-column-right {
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;
 }
 
 .data-block-secondary-column-left {
-  flex-grow: 1;  
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row;
 }
+
 .data-block-primary-header,
 .data-block-secondary-header,
 .data-block-tertiary-header,
@@ -70,6 +72,7 @@
 .data-block-secondary-caption {
   font-size: 0.7em;
   margin-left: 15px;
+  margin-top: 10px;
 }
 
 .secondary-caption {
@@ -79,18 +82,29 @@
 .data-block-tertiary-header {
   font-size: 0.9em;
   font-weight: 600;
+  text-align: center;
 }
 
 .data-block-primary-value,
 .data-block-secondary-value,
 .data-block-tertiary-value {
   color: white;
+  margin-top: 10px;
+}
+
+.data-block-primary-value-main {
+  color: white;
+  font-size: 50px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .data-block-tertiary-value {
   text-align: center;
   font-size: 1.3sem;
   font-weight: 600;
+  font-size: 30px;  
 }
 
 .data-block-primary-value {
@@ -101,6 +115,11 @@
 
 .data-block-secondary-value {
   margin-left: 15px;
+}
+
+.column-item {
+  display: flex;
+  flex-direction: column;
 }
 
 @media (max-width: 920px) {
